// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/action_button/ActionButton without style should match snapshot 1`] = `
<button
  data-action-id="action_id1"
  key="action_id1"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "rgba(61,60,64,0.3)",
      "color": "#166de0",
    }
  }
>
  mockMessageHtmlToComponent(mockFormatText(action_name))
</button>
`;

exports[`components/action_button/ActionButton without style with hasVoted should match snapshot 1`] = `
<button
  data-action-id="action_id1"
  key="action_id1"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#166de0",
      "borderColor": "rgba(22,109,224,0.3)",
      "color": "#ffffff",
    }
  }
>
  mockMessageHtmlToComponent(mockFormatText(action_name))
</button>
`;
